---
config:
  layout: elk
---
erDiagram
    direction LR
    
    USERS {
        uuid id PK
        varchar email
        timestamptz created_at
    }

    DATASETS {
        uuid id PK
        uuid user_id FK
        varchar name
        text description
        timestamptz created_at
        timestamptz updated_at
        timestamptz deleted_at
    }

    DATASET_VERSIONS {
        uuid id PK
        uuid dataset_id FK
        integer version_number
        varchar original_filename
        varchar file_format
        varchar mime_type
        bigint size_bytes
        text original_storage_uri
        text processed_storage_uri
        varchar checksum_algorithm
        varchar checksum
        bigint row_count
        integer column_count
        varchar status
        varchar error_code
        text error_message
        timestamptz processing_started_at
        timestamptz processing_finished_at
        timestamptz created_at
        timestamptz updated_at
    }

    DATASET_COLUMNS {
        uuid id PK
        uuid dataset_version_id FK
        varchar name
        integer ordinal_position
        varchar data_type
        varchar physical_type
        boolean is_nullable
        bigint null_count
        bigint distinct_count
        jsonb statistics_json
        timestamptz created_at
    }

    UPLOAD_SESSIONS {
        uuid id PK
        uuid dataset_version_id FK
        varchar status
        text storage_key
        text upload_id
        bigint expected_size_bytes
        varchar expected_checksum_algorithm
        varchar expected_checksum
        integer part_size_bytes
        timestamptz expires_at
        timestamptz completed_at
        timestamptz aborted_at
        varchar error_code
        text error_message
        timestamptz created_at
        timestamptz updated_at
    }

    MODELS {
        uuid id PK
        uuid user_id FK
        varchar name
        text description
        timestamptz created_at
        timestamptz updated_at
        timestamptz deleted_at
    }

    TRAINING_JOBS {
        uuid id PK
        uuid user_id FK
        uuid model_id FK
        uuid dataset_version_id FK
        varchar status
        varchar algorithm
        jsonb hyperparameters
        integer requested_gpu_count
        varchar idempotency_key
        varchar mlflow_run_id
        timestamptz started_at
        timestamptz finished_at
        timestamptz cancel_requested_at
        varchar error_code
        text error_message
        timestamptz created_at
        timestamptz updated_at
    }

    TRAINING_JOB_EVENTS {
        uuid id PK
        uuid training_job_id FK
        varchar event_type
        varchar from_status
        varchar to_status
        text message
        jsonb metadata_json
        timestamptz occurred_at
    }

    TRAINING_CHECKPOINTS {
        uuid id PK
        uuid training_job_id FK
        integer sequence_number
        bigint epoch
        bigint step
        text storage_uri
        bigint size_bytes
        varchar checksum_algorithm
        varchar checksum
        boolean is_resumable
        timestamptz created_at
    }

    MODEL_VERSIONS {
        uuid id PK
        uuid model_id FK
        uuid training_job_id FK
        integer version_number
        integer candidate_number
        varchar status
        text artifact_uri
        varchar artifact_format
        jsonb metrics_json
        varchar mlflow_run_id
        varchar error_code
        text error_message
        timestamptz created_at
        timestamptz updated_at
    }

    MODEL_INTERFACES {
        uuid id PK
        uuid model_version_id FK, UK
        jsonb input_schema_json
        jsonb output_schema_json
        varchar schema_version
        timestamptz created_at
    }

    INFERENCE_DEPLOYMENTS {
        uuid id PK
        uuid user_id FK
        uuid model_version_id FK
        varchar name
        varchar environment
        varchar status
        varchar kserve_namespace
        varchar kserve_service_name
        text endpoint
        integer min_replicas
        integer max_replicas
        jsonb traffic_config_json
        varchar error_code
        text error_message
        timestamptz created_at
        timestamptz updated_at
    }

    AUDIT_LOGS {
        uuid id PK
        varchar actor_type
        uuid actor_user_id FK
        varchar action
        varchar resource_type
        uuid resource_id
        varchar request_id
        varchar result
        varchar error_code
        jsonb metadata_json
        timestamptz occurred_at
    }

    OUTBOX_EVENTS {
        uuid id PK
        varchar aggregate_type
        uuid aggregate_id
        varchar event_type
        jsonb payload_json
        varchar idempotency_key
        timestamptz occurred_at
        timestamptz published_at
        integer retry_count
        text last_error
        timestamptz next_attempt_at
    }

    USERS ||--o{ DATASETS : "user_id"
    DATASETS ||--o{ DATASET_VERSIONS : "dataset_id"
    DATASET_VERSIONS ||--o{ DATASET_COLUMNS : "dataset_version_id"
    DATASET_VERSIONS ||--o{ UPLOAD_SESSIONS : "dataset_version_id"

    USERS ||--o{ MODELS : "user_id"
    USERS ||--o{ TRAINING_JOBS : "user_id"
    MODELS ||--o{ TRAINING_JOBS : "model_id"
    DATASET_VERSIONS ||--o{ TRAINING_JOBS : "dataset_version_id"

    TRAINING_JOBS ||--o{ TRAINING_JOB_EVENTS : "training_job_id"
    TRAINING_JOBS ||--o{ TRAINING_CHECKPOINTS : "training_job_id"
    TRAINING_JOBS ||--o{ MODEL_VERSIONS : "training_job_id"
    MODELS ||--o{ MODEL_VERSIONS : "model_id"

    MODEL_VERSIONS ||--o| MODEL_INTERFACES : "model_version_id"
    USERS ||--o{ INFERENCE_DEPLOYMENTS : "user_id"
    MODEL_VERSIONS ||--o{ INFERENCE_DEPLOYMENTS : "model_version_id"

    USERS o|--o{ AUDIT_LOGS : "actor_user_id"
